fixed pdf viewer on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,3 +23,23 @@ $max-content-width: {{ site.max_width }};
   "tabler-icons/tabler-icons-filled.scss",
   "tabler-icons/tabler-icons-outline.scss"
 ;
+
+
+.PDF {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 130%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+/* Then style the iframe to fit in the container div with full height and width */
+.pdf {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
